Drivers referencing scene.frame_current doesn't update when animation is playing #71212

Closed
opened 2019-10-30 10:45:34 +01:00 by Keith Boshoff · 8 comments
Member

In the attached file if you scrub the animation the driver updates correctly (cube spins) but when you hit play, the cube stands still.

Current Frame Bug.blend

In the attached file if you scrub the animation the driver updates correctly (cube spins) but when you hit play, the cube stands still. [Current Frame Bug.blend](https://archive.blender.org/developer/F7871892/Current_Frame_Bug.blend)
Author
Member

Added subscriber: @Wahooney

Added subscriber: @Wahooney
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...
(note we had #61014 which might be related...)

Can confirm, checking... (note we had #61014 which might be related...)
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

So this only works (scrubbing) since 0ec6fa782b.

Without diving deeper, I am not sure where the difference (scrubbing vs. playing) stems from [dont think it is ED_update_for_newframe...]
It is probably best if @Sergey has a look?

here is what I get on frame change

graph_id_tag_update: id=SCScene flags=AUDIO_SEEK source=USER_EDIT
graph_id_tag_update: id=SCScene flags=AUDIO_SEEK source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
[SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE()
[SCScene :: View Layer]: Operation is entry point for update: SOUND_EVAL()
[SCScene :: View Layer]: Accumulated recalc bits for SCScene: 4235264
[SCScene :: View Layer]: Accumulated recalc bits for OBCube: 1
[SCScene :: View Layer]: Accumulated recalc bits for OBLight: 0
[SCScene :: View Layer]: Accumulated recalc bits for OBCamera: 0
[SCScene :: View Layer]: deg_evaluate_copy_on_write on SCScene (0x7f31c9be9008)
[SCScene :: View Layer]: layer_eval_view_layer on View Layer (0x7f31c9ec1588)
[SCScene :: View Layer]: BKE_animsys_eval_driver on OBCube (0x7f31c9893208) fcu rotation_euler[2] (0x7f31a802a008)
[SCScene :: View Layer]: BKE_object_eval_local_transform on OBCube (0x7f31c9893208)
[SCScene :: View Layer]: BKE_object_eval_eval_base_flags on OBCube (0x7f31c9893208)
[SCScene :: View Layer]: BKE_object_eval_eval_base_flags on OBLight (0x7f31c9892c08)
[SCScene :: View Layer]: BKE_object_eval_eval_base_flags on OBCamera (0x7f31ce373a08)
[SCScene :: View Layer]: BKE_object_eval_transform_final on OBCube (0x7f31c9893208)
Depsgraph updated in 0.000457 seconds.

here is what I get on play


graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT
So this only works (scrubbing) since 0ec6fa782b. Without diving deeper, I am not sure where the difference (scrubbing vs. playing) stems from [dont think it is `ED_update_for_newframe`...] It is probably best if @Sergey has a look? here is what I get on frame change ``` graph_id_tag_update: id=SCScene flags=AUDIO_SEEK source=USER_EDIT graph_id_tag_update: id=SCScene flags=AUDIO_SEEK source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT [SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE() [SCScene :: View Layer]: Operation is entry point for update: SOUND_EVAL() [SCScene :: View Layer]: Accumulated recalc bits for SCScene: 4235264 [SCScene :: View Layer]: Accumulated recalc bits for OBCube: 1 [SCScene :: View Layer]: Accumulated recalc bits for OBLight: 0 [SCScene :: View Layer]: Accumulated recalc bits for OBCamera: 0 [SCScene :: View Layer]: deg_evaluate_copy_on_write on SCScene (0x7f31c9be9008) [SCScene :: View Layer]: layer_eval_view_layer on View Layer (0x7f31c9ec1588) [SCScene :: View Layer]: BKE_animsys_eval_driver on OBCube (0x7f31c9893208) fcu rotation_euler[2] (0x7f31a802a008) [SCScene :: View Layer]: BKE_object_eval_local_transform on OBCube (0x7f31c9893208) [SCScene :: View Layer]: BKE_object_eval_eval_base_flags on OBCube (0x7f31c9893208) [SCScene :: View Layer]: BKE_object_eval_eval_base_flags on OBLight (0x7f31c9892c08) [SCScene :: View Layer]: BKE_object_eval_eval_base_flags on OBCamera (0x7f31ce373a08) [SCScene :: View Layer]: BKE_object_eval_transform_final on OBCube (0x7f31c9893208) Depsgraph updated in 0.000457 seconds. ``` here is what I get on play ``` graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT graph_id_tag_update: id=SCScene flags=TIME source=USER_EDIT ```

This issue was referenced by 52f1762aa8d0c9313cd49b7ed61c6c071dc5e8a5

This issue was referenced by 52f1762aa8d0c9313cd49b7ed61c6c071dc5e8a5

This issue was referenced by 20881bcffd

This issue was referenced by 20881bcffd530bfc997015801738a14bb201cb6d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2019-10-30 15:18:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71212
No description provided.