Fix T71212: Drivers using scene.frame_current don't refresh on playback

Need to make such drivers explicitly dependent on time.